[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Dungeon/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Dungeon/floor.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Dungeon/RoomLayout.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Dungeon/wall.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Character/NPC.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Dungeon/EntityTracker.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/ItemDrain3-Sheet.png" type="Texture" id=7]
[ext_resource path="res://Sprites/ItemBarrel1-Sheet.png" type="Texture" id=8]
[ext_resource path="res://Scenes/HangingLight.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/WallDrain.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Dog.tscn" type="PackedScene" id=11]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=2]
0/name = "floor"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "wall"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 1 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="RoomLayout" type="TileMap"]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 0, 0, 65544, 0, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 131073, 1, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 1, 0, 196609, 1, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 1, 0, 262145, 1, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 1, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 458753, 1, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 1, 0, 524289, 1, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 1, 0, 589825, 1, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 0, 0, 655368, 0, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0 )
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Doors" type="Node2D" parent="."]

[node name="NorthDoor" parent="Doors" instance=ExtResource( 1 )]
position = Vector2( 128, 24 )

[node name="SouthDoor" parent="Doors" instance=ExtResource( 1 )]
position = Vector2( 128, 168 )
rotation = 3.14159

[node name="EastDoor" parent="Doors" instance=ExtResource( 1 )]
position = Vector2( 232.319, 96 )
rotation = 1.5708

[node name="WestDoor" parent="Doors" instance=ExtResource( 1 )]
position = Vector2( 24, 96 )
rotation = -1.5708

[node name="Entities" parent="." instance=ExtResource( 6 )]

[node name="NPC" parent="Entities" instance=ExtResource( 5 )]
position = Vector2( 64, 92 )

[node name="ItemBarrel1-Sheet" type="Sprite" parent="."]
position = Vector2( 40.7165, 38.0897 )
texture = ExtResource( 8 )

[node name="ItemBarrel1-Sheet2" type="Sprite" parent="."]
position = Vector2( 57.1382, 37.8249 )
texture = ExtResource( 8 )

[node name="ItemBarrel1-Sheet3" type="Sprite" parent="."]
position = Vector2( 184.539, 133.177 )
texture = ExtResource( 8 )

[node name="ItemDrain3-Sheet" type="Sprite" parent="."]
position = Vector2( 184.803, 34.6465 )
texture = ExtResource( 7 )

[node name="ItemBarrel1-Sheet4" type="Sprite" parent="."]
position = Vector2( 71.7058, 21.9329 )
texture = ExtResource( 8 )

[node name="HangingLight" parent="." instance=ExtResource( 9 )]
position = Vector2( 104.019, 19.0194 )

[node name="HangingLight2" parent="." instance=ExtResource( 9 )]
position = Vector2( 154.874, 19.5491 )

[node name="WallDrain" parent="." instance=ExtResource( 10 )]
position = Vector2( 186.658, 19.814 )

[node name="Dog" parent="." instance=ExtResource( 11 )]
position = Vector2( 166.528, 132.912 )
[connection signal="entered" from="Doors/NorthDoor" to="." method="_on_door_entered" binds= [ Vector2( 0, -1 ) ]]
[connection signal="entered" from="Doors/SouthDoor" to="." method="_on_door_entered" binds= [ Vector2( 0, 1 ) ]]
[connection signal="entered" from="Doors/EastDoor" to="." method="_on_door_entered" binds= [ Vector2( 1, 0 ) ]]
[connection signal="entered" from="Doors/WestDoor" to="." method="_on_door_entered" binds= [ Vector2( -1, 0 ) ]]
[connection signal="room_cleared" from="Entities" to="." method="_on_room_cleared"]
